--- a/Supervised Learning/Supervised Learning.ipynb
+++ b/Supervised Learning/Supervised Learning.ipynb
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "id": "92439b01",
    "metadata": {},
    "outputs": [
@@ -1748,7 +1748,7 @@
        "0.8125"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "id": "c973d2c5",
    "metadata": {},
    "outputs": [
@@ -1807,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "id": "e16a197d",
    "metadata": {},
    "outputs": [],
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "id": "72d70c4c",
    "metadata": {},
    "outputs": [
@@ -1838,7 +1838,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "id": "e911c14b",
    "metadata": {},
    "outputs": [],
@@ -1859,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "id": "8aaa50a7",
    "metadata": {},
    "outputs": [
@@ -1869,7 +1869,7 @@
        "0.875"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "id": "41634284",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "id": "aba09a48",
    "metadata": {},
    "outputs": [
@@ -1939,7 +1939,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "id": "36e78928",
    "metadata": {},
    "outputs": [],
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "id": "bd64dad9",
    "metadata": {},
    "outputs": [
@@ -1970,7 +1970,7 @@
        "0.9375"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "id": "ba05ace8",
    "metadata": {},
    "outputs": [
@@ -2031,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 65,
    "id": "79a5921b",
    "metadata": {},
    "outputs": [
@@ -2041,7 +2041,7 @@
        "['svc_model.pkl']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2051,12 +2051,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a551de5",
+   "metadata": {},
+   "source": [
+    "## Export the PCA transformations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "20c2e37b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['scaler.pkl']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(scaler, 'scaler.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "e99f8e98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pca.pkl']"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(pca, 'pca.pkl')"
+   ]
   }
  ],
  "metadata": {
